@@ -1,3 +1,15 @@
+2016-09-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Settings/q_std.m: Revision of fmode 1. Small changes for species
+	retrieval settings.
+
+	* Settings/q_std.m:
+	* Settings/q_meso.m: General changes are Q.TB_CONTRAST_FAC = [];,
+	Q.STOP_DX = 0.5 and Q.NOISE_CORRMODEL = 'expo';
+
+	* Mscripts_atmlab/isboolean.m:
+	* Mscripts_atmlab/rqre_datatype.m: Copied from Atmlab.
+
 2016-09-15  Jimmy Petersson  <jimmy@molflow.com>
 
 	* runscript.m: Close all files before exit.
